--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WebService-FogBugz
 
+0.05   Sat Feb  9 11:47:46 JST 2013
+       - Start using git, Module::Install, 
+
 0.0.4  Wed Mar 12 19:03:06 PDT 2008
        - Fixed RT#33997 (kpower, thanks for a report)
        - Add test code: t/04.response.t
