--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for WebService-FogBugz
         - aded META files as permanent files.
         - updated Makefile.PL without Module-Install.
         - change file dates changed to meet W3CDTF standards.
+        - extended META and functional test suite.
 
 0.0.5   2013-02-09 11:47:46
         - Start using git, Module::Install, 
