--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@ Revision history for WebService-FogBugz
         - updated Makefile.PL without Module-Install.
         - change file dates changed to meet W3CDTF standards.
         - extended META and functional test suite.
+        - added LICENSE file.
 
 0.0.5   2013-02-09T11:47:46
         - Start using git, Module::Install, 
