--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for WebService-FogBugz
 =======================================
 
+        - fix executable Build Tool and text files.
+
 0.1.1   2015-01-10
         - added Config module.
         - merge original module test scripts into one.
